--- a/KV4S.AR.DMR.RB.AT.RoamingChannels/KV4S.AR.DMR.RB.AT.RoamingChannels.csproj
+++ b/KV4S.AR.DMR.RB.AT.RoamingChannels/KV4S.AR.DMR.RB.AT.RoamingChannels.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>KV4S.AR.DMR.RB.AT.RoamingChannels</RootNamespace>
     <AssemblyName>IKV4S.AR.DMR.RB.AT.RoamingChannels</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <SccProjectName>
@@ -20,6 +20,7 @@
     </SccAuxPath>
     <SccProvider>
     </SccProvider>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
